# PMpp

./: .gitignore  .readthedocs.yaml  ComputePk.py  LICENSE  Models.py  PMpp.py  README.md  SaveLHSims.py  THIRD_PARTY_NOTICES.md  Training.py  Visualisation.py  pyproject.toml  requirements.txt
CamelsSims/: LH_0_cosmo.npy  LH_0_z_32.npy  LH_100_cosmo.npy
docs/: requirements.txt
jaxpm/: painting.py  pm.py  utils.py
notebooks/: mGPU_pmwd_local.ipynb  pmpp_showcase.ipynb
pk/: PK_LH_0_32.npy  PK_LH_100_32.npy  k_LH_100_32.npy
pmwd/: boltzmann.py  configuration.py  gather.py  gravity.py  modes.py  nbody.py  ode_util.py  pm_util.py  vis_util.py
scripts/: benchmark_pmpp_1024_forward.py  compare_drift_gradients.py  compare_fft_gradients.py  compare_gravity_gradients.py  compare_halo_moving_gradients.py  compare_kick_gradients.py  compare_lpt_gradients.py  compare_modes_pipeline_gradients.py  compare_nbody_gradients.py  compare_pmpp_pmwd_idxless.py  compare_scatter_gradients.py  cosmo_parameters_uniform.npy  diagnose_one_step_nbody_adjoint.py  plot_nbody_forward_scaling.py  plot_pmpp_nested_nbody_mesh2.py  run_4gpu_diagnostics.py  run_4gpu_stage_suite.py  run_4gpu_stage_suite.sh  run_snapshots.sh
src/: CamelsUtils.py  ComputePk.py  FFT_distributed.py  Models.py  PM_Distributed.py  PMpp.py  SaveLHSims.py  Save_hdf5.py  Training.py  Utils.py  Visualisation.py  boltzmann.py  camels_io.py  camels_utils.py  configuration.py  cosmo.py  custom_ode.py  enmesh.py  fft.py  fft_distributed.py  gather.py  gather_old.py  gravity.py  growth.py  halo_moving.py  lpt.py  mesh_halo.py  modes.py  multigpu_configuration.py  nbody.py  nbody_observers.py  ode_util.py  particles.py  plotting_utils.py  potential_correction.py  power_spectrum.py  save_hdf5.py  scatter.py  steps.py  utils.py
tests/: conftest.py  test_camels_ic_agreement.py  test_camels_io.py  test_finite_diff.py  test_forward_mesh_shape2.py  test_grad_drift.py  test_grad_fft_distributed.py  test_grad_gather.py  test_grad_gravity.py  test_grad_halo_moving.py  test_grad_kick.py  test_grad_lpt.py  test_grad_modes_pipeline.py  test_grad_nbody.py  test_grad_nbody_mesh_halo.py  test_grad_scatter.py  test_gravity_particle_nyquist_filter.py  test_mesh_halo_scatter_gather.py  test_nested_white_noise.py  test_particles_ordered_init.py  test_power_spectrum.py  (+3 more)
(+119 files in other folders)
