[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmpp"
version = "0.1.0"
description = "PM++: a JAX-based differentiable multi-GPU Particle-Mesh cosmology simulator."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rouzib" }]
dependencies = [
  "jax>=0.4.7",
  "mcfit>=0.0.18",
]

[project.optional-dependencies]
docs = [
  "jupyter-book<2.0",
  "sphinx",
  "sphinx-rtd-theme",
  "myst-nb",
  "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pmpp"]
